Fix spacing

--- a/packages/web/src/components/track/GiantTrackTile.module.css
+++ b/packages/web/src/components/track/GiantTrackTile.module.css
@@ -330,6 +330,14 @@
   margin-left: 4px;
 }
 
+.badgeIcon svg {
+  margin-right: 0px !important; /* to override the !important in UserBadges */
+}
+
+.suffix {
+  margin-left: 4px;
+}
+
 .verifiedGreenIcon {
   width: 24px;
   height: 24px;
